--- a/src/FaxCoreRestClient/FaxCoreRestClient.csproj
+++ b/src/FaxCoreRestClient/FaxCoreRestClient.csproj
@@ -1,15 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>$(NetCoreAppCurrent);$(NetCoreAppPrevious);$(NetCoreAppMinimum);netstandard2.0;$(NetFrameworkMinimum)</TargetFrameworks>
+        <TargetFrameworks>net47;net471;net472;net48;net7.0;net6.0</TargetFrameworks>
         <PackageDescription>
             Provides a client for FaxCore EV6 REST API.
         </PackageDescription>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IsPackable>true</IsPackable>
+        <Authors>Jeremey Schrack</Authors>
+        <PackageId>FaxCoreRestClient</PackageId>
+        <Version>1.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Models\Response\" />
+        <PackageReference Include="System.Text.Json" Version="7.0.2" />
+        <PackageReference Include="System.Net.Http" Version="[4.3.4, )" />
     </ItemGroup>
 
 </Project>
