--- a/src/FaxCore.Sandbox/FaxCore.Sandbox.csproj
+++ b/src/FaxCore.Sandbox/FaxCore.Sandbox.csproj
@@ -8,11 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\FaxCoreRestClient\FaxCoreRestClient.csproj"/>
+        <ProjectReference Include="..\FaxCoreRestClient\FaxCoreRestClient.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="RestSharp" Version="110.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+        <PackageReference Include="RestSharp" Version="110.2.0" />
     </ItemGroup>
 
 </Project>
