--- a/src/FaxCore.Sandbox/FaxCore.Sandbox.csproj
+++ b/src/FaxCore.Sandbox/FaxCore.Sandbox.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\FaxCoreRestClient\FaxCoreRestClient.csproj" />
+        <ProjectReference Include="..\FaxCoreRestClient\FaxCore.Ev6.RestClient.csproj" />
     </ItemGroup>
 
     <ItemGroup>
