--- a/src/FaxCore.Sandbox/FaxCore.Sandbox.csproj
+++ b/src/FaxCore.Sandbox/FaxCore.Sandbox.csproj
@@ -8,13 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\FaxCoreRestClient\FaxCore.Ev6.RestClient.csproj" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
-        <PackageReference Include="RestSharp" Version="110.2.0" />
+      <ProjectReference Include="..\FaxCore.Ev6.RestClient\FaxCore.Ev6.RestClient.csproj" />
     </ItemGroup>
 
 </Project>
